--- a/css/proyect.styl
+++ b/css/proyect.styl
@@ -1,3 +1,37 @@
+mi_fondo = #6F78F2
+letras = #D2721D
+azul=#22BCE0
+
 body
-	background red
-	color yellow
+	background mi_fondo
+	color letras
+	font-family Arial
+	font-size 16px
+	
+header
+	background orange
+	color white
+	padding 0.5em
+	
+	.logo
+		border-right 1px solid azul
+		witdh 60px
+		img
+			witdh 52px
+			
+	.titular
+		margin 0 80px 0 70px
+		.titulo
+			font-size 18px
+			font-weight normal
+			margin 0
+			padding 0
+	
+nav
+	background azul
+
+.left
+	float left
+	
+.right
+	float right
