--- a/css/proyect.styl
+++ b/css/proyect.styl
@@ -26,6 +26,12 @@ header
 			font-weight normal
 			margin 0
 			padding 0
+			
+	.usuario
+		.avatar
+			img
+				witdh 50px
+				border-radius 50%
 	
 nav
 	background azul
