--- a/css/proyect.css
+++ b/css/proyect.css
@@ -1,1 +1,269 @@
-body{background:#6f78f2;color:#d2721d;font-family:Arial;font-size:16px}header{background:#ffa500;color:#fff;padding:.5em;}header .logo{border-right:1px solid #22bce0;witdh:60px;}header .logo img{witdh:52px}header .titular{margin:0 80px 0 70px;}header .titular .titulo{font-size:18px;font-weight:normal;margin:0;padding:0}header .usuario .avatar img{witdh:50px;border-radius:50%}nav{background:#22bce0}.left{float:left}.right{float:right}
+@font-face {
+  font-family: 'iconos';
+  src: url("../fonts/icomoon.eot?aluoqh");
+  src: url("../fonts/icomoon.eot?aluoqh#iefix") format('embedded-opentype'), url("../fonts/icomoon.ttf?aluoqh") format('truetype'), url("../fonts/icomoon.woff?aluoqh") format('woff'), url("../fonts/icomoon.svg?aluoqh#icomoon") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+a {
+  color: #dd4f24;
+}
+body {
+  background: #6f78f2;
+  color: #d2721d;
+  font-family: Arial;
+  font-size: 16px;
+}
+footer {
+  background: #dd4f24;
+  color: rgba(255,255,255,0.5);
+  text-align: center;
+  padding: 1em 0;
+  width: 100%;
+}
+footer h3 {
+  font-size: 14px;
+  font-weight: normal;
+}
+footer h3 strong {
+  display: block;
+}
+footer h3 .pie:before,
+footer h3 .pie:after {
+  content: "-";
+}
+header {
+  background: #ffa500;
+  box-shadow: 0 5px 0 rgba(0,0,0,0.2);
+  overflow: hidden;
+  color: #fff;
+  padding: 0.5em;
+  position: relative;
+  z-index: 1;
+}
+header .logo {
+  border-right: 1px solid #22bce0;
+  float: left;
+  witdh: 60px;
+}
+header .logo img {
+  witdh: 52px;
+}
+header .titular {
+  margin: 0 90px 0 70px;
+}
+header .titular .filtro {
+  color: #22bce0;
+  font-weight: bold;
+  font-size: 14px;
+  font-style: italic;
+  text-decoration: none;
+}
+header .titular .publicar {
+  background: #dd4f24;
+  color: #fff;
+  float: right;
+  font-style: italic;
+  margin: 10px 1em 0 0;
+  padding: 0.2em 0.5em;
+  text-decoration: none;
+  text-shadow: 1px 1px 0px #000;
+}
+header .titular .publicar:before {
+  font-family: "iconos";
+  content: "\e802";
+  margin: 0 2px 0 0;
+}
+header .titular .titulo {
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+}
+header .usuario {
+  position: absolute;
+  margin: 0 0.5em 0 0;
+  right: 10px;
+  top: 10px;
+}
+header .usuario .avatar {
+  margin: 0 1em 0 0;
+  position: relative;
+  z-index: 2;
+}
+header .usuario .avatar img {
+  witdh: 50px;
+  border-radius: 50%;
+}
+header .usuario .flechita {
+  background: #dd4f24;
+  color: #fff;
+  display: block;
+  text-decoration: none;
+  padding: 3px;
+  position: absolute;
+  top: 20px;
+  right: 0;
+  text-align: right;
+  witdh: 100%;
+}
+header .usuario .flechita:after {
+  display: inline-block;
+  font-family: "iconos";
+  content: "\e800";
+  text-shadow: 2px 2px 0px #000;
+}
+nav {
+  background: #22bce0;
+  border-left: 15px solid #fff;
+  position: relative;
+}
+nav:before {
+  border-left: 7px solid #fff;
+  border-bottom: 20px solid transparent;
+  border-top: 20px solid transparent;
+  content: "";
+  left: 0;
+  position: absolute;
+  top: 0;
+}
+nav .menu {
+  height: 40px;
+  line-height: 30px;
+  margin: 0;
+  padding: 0;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+nav .menu:: -webkit-scrollbar {
+  display: none;
+}
+nav .menu li {
+  display: inline-block;
+}
+nav .menu li a {
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0 0.5em;
+  padding: 0 0.2em;
+}
+.posts {
+  padding: 0.5em;
+}
+.posts .post {
+  background: #fff;
+  border-radius: 0 0 0.5em 0.5em;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+  color: #00f;
+  margin-bottom: 0.5em;
+}
+.posts .acciones {
+  border-top: 3px solid #22bce0;
+  padding: 0.5em;
+  overflow: hidden;
+}
+.posts .acciones .coments {
+  border-radius: 3px;
+  background: #22bce0;
+  color: #fff;
+  float: right;
+  text-decoration: none;
+  padding: 2px 5px;
+}
+.posts .acciones .coments .comentarios {
+  margin: 0 1em 0 0;
+  text-decoration: none;
+}
+.posts .acciones .coments .estrellita {
+  margin: 0;
+  text-decoration: none;
+}
+.posts .acciones .coments .estrellita:before {
+  color: #f7ef21;
+  font-family: "iconos";
+  content: "\e803";
+}
+.posts .acciones .votos {
+  float: left;
+}
+.posts .acciones .votos .down,
+.posts .acciones .votos .up {
+  text-decoration: none;
+  vertivar-align: bottom;
+}
+.posts .acciones .votos .down {
+  color: #f00;
+}
+.posts .acciones .votos .down:before {
+  font-family: "iconos";
+  font-size: 1.5em;
+  content: "\e800";
+}
+.posts .acciones .votos .up {
+  color: #008000;
+}
+.posts .acciones .votos .up:before {
+  font-family: "iconos";
+  font-size: 1.5em;
+  content: "\e801";
+}
+.posts .detalles {
+  color: #6f78f2;
+  position: relative;
+}
+.posts .detalles .detalles1 {
+  height: 160px;
+  margin-left: 130px;
+}
+.posts .detalles .detalles1 .autor {
+  margin: 0.5em 0 2em 0;
+}
+.posts .detalles .detalles1 .fecha {
+  float: right;
+  margin: 0 1em 0 0;
+}
+.posts .detalles .detalles1 .tag {
+  background: #22bce0;
+  border-radius: 0.5em;
+  color: #fff;
+  padding: 0.2em 0.5em;
+  text-decoration: none;
+}
+.posts .detalles .detalles1 .titulo {
+  color: #d2721d;
+  font-size: 18px;
+  font-style: italic;
+  margin: 0;
+  padding: 0.5em 0.5em 0 0;
+}
+.posts .detalles .imagen {
+  margin: 0;
+  float: left;
+}
+.posts .detalles img {
+  position: absolute-relative;
+  height: 140px;
+  vertivar-align: top;
+  witdh: 100px;
+}
+@media screen and (min-width: 768px) {
+  header .titular .publicar {
+    padding-left: 3em;
+    position: relative;
+  }
+  header .titular .publicar:before {
+    left: 0;
+    font-size: 2em;
+    position: absolute;
+    top: -10px;
+  }
+  .posts .post {
+    display: inline-block;
+    width: 48%;
+    vertical-align: top;
+  }
+  .posts .post:nth-child(odd) {
+    margin-right: 2%;
+  }
+}
