--- a/css/proyect.styl
+++ b/css/proyect.styl
@@ -1,6 +1,21 @@
 mi_fondo = #6F78F2
 letras = #D2721D
 azul=#22BCE0
+naranja = #DD4F24
+
+@font-face {
+	font-family: 'iconos';
+	src:url('../fonts/icomoon.eot?aluoqh');
+	src:url('../fonts/icomoon.eot?aluoqh#iefix') format('embedded-opentype'),
+		url('../fonts/icomoon.ttf?aluoqh') format('truetype'),
+		url('../fonts/icomoon.woff?aluoqh') format('woff'),
+		url('../fonts/icomoon.svg?aluoqh#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+a
+	color naranja
 
 body
 	background mi_fondo
@@ -8,36 +23,260 @@ body
 	font-family Arial
 	font-size 16px
 	
+footer
+	background naranja
+	color rgba(white, 0.5)
+	text-align center
+	padding 1em 0
+	width 100%
+	
+	
+	h3
+		font-size 14px
+		font-weight normal
+		
+		strong
+			display block
+			
+		.pie 
+			&:before
+			&:after
+				content "-"
+					
+	
 header
 	background orange
+	box-shadow 0 5px 0 rgba(0,0,0,0.2)
+	overflow hidden
 	color white
 	padding 0.5em
+	position relative
+	z-index 1
 	
 	.logo
 		border-right 1px solid azul
+		float left
 		witdh 60px
 		img
 			witdh 52px
 			
 	.titular
-		margin 0 80px 0 70px
+		margin 0 90px 0 70px
+		
+		.filtro
+			color azul
+			font-weight bold
+			font-size 14px
+			font-style italic
+			text-decoration none
+			
+		.publicar
+			
+			background naranja
+			color white
+			float right
+			font-style italic
+			margin 10px 1em 0 0
+			padding 0.2em 0.5em
+			text-decoration none					
+			text-shadow 1px 1px 0px black
+			&:before
+				font-family "iconos"
+				content "\e802"
+				margin 0 2px 0 0
+				
+		
 		.titulo
 			font-size 18px
 			font-weight normal
 			margin 0
 			padding 0
 			
+			
 	.usuario
+		position absolute
+		margin 0 .5em 0 0
+		right 10px
+		top 10px
+		
 		.avatar
+			margin 0 1em 0 0
+			position relative
+			z-index 2
 			img
 				witdh 50px
 				border-radius 50%
+		.flechita
+			background naranja
+			color white
+			display block
+			text-decoration none
+			padding 3px
+			position absolute
+			top 20px
+			right 0
+			text-align right
+			witdh 100%
+			&:after
+				display inline-block
+				font-family "iconos"
+				content "\e800"
+				text-shadow 2px 2px 0px black
 	
 nav
 	background azul
-
-.left
-	float left
+	border-left 15px solid white
+	position relative
 	
-.right
-	float right
+	&:before
+		border-left 7px solid white
+		border-bottom 20px solid transparent
+		border-top 20px solid transparent
+		content ""
+		left 0
+		position absolute
+		top 0
+		
+		
+	
+	.menu
+		height 40px
+		line-height 30px
+		margin 0
+		padding 0
+		overflow-x auto
+		white-space nowrap
+		&:: -webkit-scrollbar
+			display none
+
+		li
+			display inline-block
+			
+			a
+				color white
+				text-decoration none
+				display inline-block
+				margin 0 0.5em 
+				padding 0 0.2em
+.posts
+	
+	padding 0.5em
+	
+	.post
+		background white 
+		border-radius 0 0 0.5em 0.5em
+		box-shadow 2px 2px 10px rgba(black , 0.5)
+		color blue
+		margin-bottom 0.5em
+				
+	.acciones
+		border-top 3px solid azul
+		padding 0.5em
+		overflow hidden
+		
+		.coments
+			border-radius 3px
+			background azul
+			color white
+			float right
+			text-decoration none
+			
+			padding 2px 5px
+			
+			.comentarios
+				margin 0 1em 0 0
+				text-decoration none
+				
+			.estrellita
+				margin 0
+				text-decoration none
+				&:before
+					color #F7EF21
+					font-family "iconos"
+					content "\e803"
+			
+									
+		.votos
+			float left
+			
+			.down
+			.up
+				text-decoration none
+				vertivar-align bottom
+				
+			.down
+				color red
+				&:before
+					font-family "iconos"
+					font-size 1.5em
+					content "\e800"
+			.up
+				color green
+				&:before
+					font-family "iconos"
+					font-size 1.5em
+					content "\e801"
+				
+		
+	.detalles
+		color mi_fondo
+		position relative
+		
+		
+		.detalles1
+			height 160px
+			margin-left 130px
+			
+			.autor  
+				margin 0.5em 0 2em 0
+				
+			.fecha
+				float right
+				margin 0 1em 0 0
+				
+			.tag
+				background azul
+				border-radius 0.5em	
+				color white
+				padding 0.2em 0.5em
+				text-decoration none
+					
+		
+			.titulo
+				color letras
+				font-size 18px
+				font-style italic
+				margin 0
+				padding 0.5em 0.5em 0 0
+		
+		.imagen
+				margin 0
+				float left
+			
+			img
+				position absolute-relative
+				height 140px
+				vertivar-align top
+				witdh 100px
+				
+@media screen and (min-width: 768px)
+
+	header
+		.titular
+			.publicar
+				padding-left 3em
+				position relative
+				
+				&:before
+					left 0
+					font-size 2em
+					position absolute
+					top -10px
+	.posts
+		.post
+			display inline-block
+			width 48%
+			vertical-align top
+			&:nth-child(odd)
+				margin-right 2%
+
