--- a/css/proyect.css
+++ b/css/proyect.css
@@ -81,7 +81,7 @@ header .titular .titulo {
   padding: 0;
 }
 header .usuario {
-  position: absolute;
+  position: fixed;
   margin: 0 0.5em 0 0;
   right: 10px;
   top: 10px;
