--- a/Boots/styl.css
+++ b/Boots/styl.css
@@ -1,3 +1,8 @@
+footer {
+  background-color: #8f8f8f;
+  color: #fff;
+  padding: 1em;
+}
 header {
   background-color: #444;
   color: #fff;
@@ -6,6 +11,53 @@ header {
 header h1 {
   font-size: 18px;
   font-weight: normal;
-  padding: 0;
   margin: 0;
+  padding: 0;
+}
+header .logo figure {
+  border: 2px dashed #bbb;
+  height: 52px;
+  width: 52px;
+}
+header .usuario .avatar {
+  border: 2px dashed #bbb;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+}
+section {
+  padding: 1.2em;
+}
+section article {
+  border: 1px solid #8f8f8f;
+  border-bottom-left-radius: 0.8em;
+  border-bottom-right-radius: 0.8em;
+  overflow: hidden;
+  margin-bottom: 1.2em;
+  box-shadow: 0 0 0.5em 0 #444;
+}
+section article figure {
+  background-color: #8f8f8f;
+  height: 160px;
+  width: 120px;
+}
+section article h2 {
+  color: #444;
+  font-size: 18px;
+  font-weight: normal;
+}
+section article .acciones {
+  border-top: 3px solid #8f8f8f;
+  min-height: 3em;
+  padding: 0.8em;
+}
+section article .fecha {
+  position: relative;
+  right: 20px;
+}
+section article .votos {
+  color: #444;
+}
+section article .comentarios {
+  color: #fff;
 }
