--- a/Boots/styl.styl
+++ b/Boots/styl.styl
@@ -1,4 +1,10 @@
 gris_oscuro = #444
+gris_claro = lighten(gris_oscuro, 40%)
+
+footer
+	background-color gris_claro
+	color white
+	padding 1em
 
 header
 	background-color gris_oscuro
@@ -8,5 +14,54 @@ header
 	h1
 		font-size 18px
 		font-weight normal
-		padding 0
 		margin 0
+		padding 0
+	
+	.logo figure
+		border 2px dashed invert(gris_oscuro)
+		height 52px
+		width 52px
+		
+	.usuario
+		.avatar
+			border 2px dashed invert(gris_oscuro)
+			border-radius 50%
+			height 50px
+			width 50px
+			
+section
+	padding 1.2em
+	
+	article
+		border 1px solid lighten(gris_oscuro, 40%)
+		border-bottom-left-radius 0.8em
+		border-bottom-right-radius 0.8em
+		overflow hidden
+		margin-bottom 1.2em
+		box-shadow 0 0 0.5em 0 gris_oscuro
+	
+		figure
+			background-color gris_claro
+			height 160px
+			width 120px
+			
+		h2
+			color gris_oscuro
+			font-size 18px
+			font-weight normal
+			
+		.acciones
+			border-top 3px solid gris_claro
+			min-height 3em
+			padding 0.8em
+			
+		.fecha
+			position relative
+			right 20px
+		
+		.votos
+			color gris_oscuro
+			
+		.comentarios
+			color white
+			
